5º Update mobile screen

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <!-- Section onde vai está o logo e o texto explicativo. -->
         <section id="logos">
             <img id="logo-mario" src="./src/media/img/logo-mario-memory.png" alt="Logo Mário Memory">
-            <p>Encontre todos os pares no menor tempo possível acumulando pontos 
-               a cada rodada.</p>
+            <p>Encontre todos os pares no menor tempo possível a cada rodada.</p>
         </section>
 
         <!-- Section onde vai está o formulário -->
